[gd_scene load_steps=17 format=3 uid="uid://lvpgjx3lte0g"]

[ext_resource type="Script" path="res://Scripts/DestructibleObject.gd" id="1_pgaeu"]
[ext_resource type="Texture2D" uid="uid://ci7vucublnrdt" path="res://Assets/Destructible Objects Sprite Sheet.png" id="2_6622v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jm0sv"]
size = Vector2(37, 34)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cx7sj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n6s8a"]
atlas = ExtResource("2_6622v")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kw6k"]
atlas = ExtResource("2_6622v")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7j1a"]
atlas = ExtResource("2_6622v")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbrak"]
atlas = ExtResource("2_6622v")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdeb8"]
atlas = ExtResource("2_6622v")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldwb3"]
atlas = ExtResource("2_6622v")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8084y"]
atlas = ExtResource("2_6622v")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa066"]
atlas = ExtResource("2_6622v")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf8tk"]
atlas = ExtResource("2_6622v")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyq4c"]
atlas = ExtResource("2_6622v")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2brl2"]
atlas = ExtResource("2_6622v")
region = Rect2(0, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_dn481"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6s8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kw6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7j1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbrak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdeb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldwb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8084y")
}],
"loop": true,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa066")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf8tk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyq4c")
}],
"loop": true,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2brl2")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[node name="Box" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_pgaeu")
hp = 50

[node name="AreaDamageBox" type="Area2D" parent="CharacterBody2D" groups=["destructible"]]
collision_layer = 8
collision_mask = 9

[node name="BoxHitbox" type="CollisionShape2D" parent="CharacterBody2D/AreaDamageBox"]
position = Vector2(-0.5, -12)
shape = SubResource("RectangleShape2D_jm0sv")

[node name="Floor" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_cx7sj")

[node name="DieTimer" type="Timer" parent="CharacterBody2D"]

[node name="HurtTimer" type="Timer" parent="CharacterBody2D"]
wait_time = 0.4

[node name="DestructibleSprite" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(-3, -12)
sprite_frames = SubResource("SpriteFrames_dn481")
animation = &"die"

[connection signal="died" from="CharacterBody2D" to="CharacterBody2D" method="_on_died"]
[connection signal="timeout" from="CharacterBody2D/DieTimer" to="CharacterBody2D" method="_on_die_timer_timeout"]
[connection signal="timeout" from="CharacterBody2D/HurtTimer" to="CharacterBody2D" method="_on_hurt_timer_timeout"]
